# sawit-engine

./: CMakeLists.txt  CMakePresets.json  DOCUMENTATION.md  LICENSE  Makefile  README.md  app.c  app.h  audio.c  audio.h  block_render.c  block_world.c  camera.h  console_overlay.c  diagnostics.c  diagnostics.h  gl_headers.h  gpu_preferences.c  gpu_preferences.h  graphics_backend.c  graphics_backend.h  grass_render.c  grass_render.h  main.c  multiplayer_render.c  multiplayer_render.h  overlay_ui.h  palm_render.c  palm_render.h  platform_cocoa.h  platform_cocoa.mm  platform_support.c  platform_support.h  platform_win32.c  platform_x11.c  player_controller.c  player_controller.h  procedural_lod.c  render_quality.c  renderer.c  (+13 more)
docs/: docs.css  docs.html
public/: engineApi.js  script.js
shaders/: palm.frag.glsl  palm.vert.glsl  palm_shadow.vert.glsl  post.frag.glsl  post.vert.glsl  shadow.vert.glsl  sky.frag.glsl  sky.vert.glsl  terrain.frag.glsl  terrain.vert.glsl
shaders/lighting/: pathtrace_lighting.glsl  raytrace_lighting.glsl  terrain_surface.glsl
